# energy-procurement

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: capture_prices.json  generation_mix.json  generation_mix_hourly.json  yoy_overlay.json
pipeline/: run.py
pipeline/fetchers/: entsoe.py  smard.py
pipeline/metrics/: capture_prices.py  quantiles.py  yoy.py
tests/: test_capture_prices.py  test_entsoe.py  test_quantiles.py  test_smard.py  test_yoy.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/components/: GenerationMixChart.tsx  GenerationMixSection.tsx  QuantileBandChart.tsx  SpotPriceSection.tsx
web/lib/: dataUtils.ts  generationUtils.ts
