[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy-procurement"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "entsoe-py>=0.6",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
